crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_draft_root_hunks_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  4 repos · 8 files · 11 hunks  standalone  [Accept All]                          watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │reply.md  M  +2 −2                     [A accept file] [U restore file]│"
"│  main · 4 files          │@@ -1,5 +1,5 @@                         [a accept] [u restore] [m flag]│"
"│  A .gitignore  +1 −0     │ line 1                                                                │"
"│  M f1  +1 −1             │-line 2                                                                │"
"│  M f2  +1 −0             │+line 2 edited by the agent                                            │"
"│  M parse.rs  +10 −2      │ line 3                                                                │"
"│──────────────────────────│ line 4                                                                │"
"│alpha/_drafts             │ line 5                                                                │"
"│  draft · 1 file          │                                                                       │"
"│  M reply.md  +2 −2       │@@ -15,6 +15,6 @@                       [a accept] [u restore] [m flag]│"
"│──────────────────────────│ line 15                                                               │"
"│beta                      │ line 16                                                               │"
"│  main · 2 files          │ line 17                                                               │"
"│  A u1  +1 −0  [upstream] │-line 18                                                               │"
"│  A u2  +2 −0  [mixed]    │+line 18 edited by the agent                                           │"
"│  [upstream] 1 file       │ line 19                                                               │"
"│──────────────────────────│ line 20                                                               │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
