crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_draft_root_hunks_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..38 Reset Reset BOLD
0 40..50 Reset Reset DIM
1 27..100 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..36 Reset Reset BOLD
2 41..43 Green Reset -
2 44..46 Red Reset -
2 67..99 Reset Reset DIM
2 99..100 Cyan Reset -
3 27..28 Cyan Reset -
3 28..99 Reset Reset REVERSED
3 99..100 Cyan Reset -
4 17..19 Green Reset -
4 20..22 Red Reset -
4 27..28 Cyan Reset -
4 99..100 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 28..35 Red Reset -
5 99..100 Cyan Reset -
6 9..11 Green Reset -
6 12..14 Red Reset -
6 27..28 Cyan Reset -
6 28..55 Green Reset -
6 99..100 Cyan Reset -
7 15..18 Green Reset -
7 19..21 Red Reset -
7 27..28 Cyan Reset -
7 99..100 Cyan Reset -
8 1..27 Reset Reset DIM
8 27..28 Cyan Reset -
8 99..100 Cyan Reset -
9 1..8 Reset Reset BOLD
9 27..28 Cyan Reset -
9 99..100 Cyan Reset -
10 27..28 Cyan Reset -
10 99..100 Cyan Reset -
11 1..15 Reset Reset REVERSED
11 15..17 Green Reset REVERSED
11 17..18 Reset Reset REVERSED
11 18..20 Red Reset REVERSED
11 20..27 Reset Reset REVERSED
11 27..45 Cyan Reset -
11 68..99 Reset Reset DIM
11 99..100 Cyan Reset -
12 1..27 Reset Reset DIM
12 27..28 Cyan Reset -
12 99..100 Cyan Reset -
13 1..5 Reset Reset BOLD
13 27..28 Cyan Reset -
13 99..100 Cyan Reset -
14 27..28 Cyan Reset -
14 99..100 Cyan Reset -
15 9..11 Green Reset -
15 12..14 Red Reset -
15 14..26 Reset Reset DIM
15 27..28 Cyan Reset -
15 28..36 Red Reset -
15 99..100 Cyan Reset -
16 9..11 Green Reset -
16 12..14 Red Reset -
16 14..23 Reset Reset DIM
16 27..28 Cyan Reset -
16 28..56 Green Reset -
16 99..100 Cyan Reset -
17 27..28 Cyan Reset -
17 99..100 Cyan Reset -
18 1..27 Reset Reset DIM
18 27..28 Cyan Reset -
18 99..100 Cyan Reset -
19 1..6 Reset Reset BOLD
19 27..28 Cyan Reset -
19 99..100 Cyan Reset -
20 27..28 Cyan Reset -
20 99..100 Cyan Reset -
21 12..14 Green Reset -
21 15..17 Red Reset -
21 27..28 Cyan Reset -
21 99..100 Cyan Reset -
22 27..28 Cyan Reset -
22 99..100 Cyan Reset -
23 27..28 Cyan Reset -
23 99..100 Cyan Reset -
24 27..28 Cyan Reset -
24 99..100 Cyan Reset -
25 27..28 Cyan Reset -
25 99..100 Cyan Reset -
26 27..28 Cyan Reset -
26 99..100 Cyan Reset -
27 27..28 Cyan Reset -
27 99..100 Cyan Reset -
28 27..100 Cyan Reset -
29 0..87 Reset Reset DIM
