crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_editor_long_path_60x20_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..58 Reset Reset BOLD
1 0..60 Cyan Reset -
2 0..1 Cyan Reset -
2 1..5 Reset Reset DIM
2 59..60 Cyan Reset -
3 0..1 Cyan Reset -
3 1..6 Reset Reset DIM
3 59..60 Cyan Reset -
4 0..1 Cyan Reset -
4 1..6 Reset Reset DIM
4 59..60 Cyan Reset -
5 0..1 Cyan Reset -
5 1..6 Reset Reset DIM
5 59..60 Cyan Reset -
6 0..1 Cyan Reset -
6 1..6 Reset Reset DIM
6 59..60 Cyan Reset -
7 0..1 Cyan Reset -
7 1..6 Reset Reset DIM
7 59..60 Cyan Reset -
8 0..1 Cyan Reset -
8 1..6 Reset Reset DIM
8 59..60 Cyan Reset -
9 0..1 Cyan Reset -
9 1..6 Reset Reset DIM
9 58..59 Reset Reset DIM
9 59..60 Cyan Reset -
10 0..1 Cyan Reset -
10 1..6 Reset Reset DIM
10 59..60 Cyan Reset -
11 0..1 Cyan Reset -
11 1..6 Reset Reset DIM
11 58..59 Reset Reset DIM
11 59..60 Cyan Reset -
12 0..1 Cyan Reset -
12 1..6 Reset Reset DIM
12 58..59 Reset Reset DIM
12 59..60 Cyan Reset -
13 0..1 Cyan Reset -
13 1..6 Reset Reset DIM
13 59..60 Cyan Reset -
14 0..1 Cyan Reset -
14 1..5 Reset Indexed(236) DIM
14 5..6 Reset Indexed(236) BOLD
14 6..59 Reset Indexed(236) -
14 59..60 Cyan Reset -
15 0..1 Cyan Reset -
15 1..5 Reset Indexed(236) DIM
15 5..6 Reset Indexed(236) BOLD
15 6..59 Reset Indexed(236) -
15 59..60 Cyan Reset -
16 0..1 Cyan Reset -
16 1..5 Reset Indexed(236) DIM
16 5..6 Reset Indexed(236) BOLD
16 6..59 Reset Indexed(236) -
16 59..60 Cyan Reset -
17 0..1 Cyan Reset -
17 1..5 Reset Indexed(238) DIM
17 5..6 Reset Indexed(238) BOLD
17 6..7 Reset Indexed(238) -
17 7..8 Reset Indexed(238) REVERSED
17 8..58 Reset Indexed(238) -
17 58..59 Reset Indexed(238) DIM
17 59..60 Cyan Reset -
18 0..60 Cyan Reset -
19 0..19 Reset Reset DIM
