crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_editor_open_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"editing src/parse.rs · line 21/62                                                                   "
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │   1▎//! A tiny line-oriented parser for `key = value` text.           │"
"│  main · 3 files          │   2▎//!                                                               │"
"│  M f1  +1 −1             │   3▎//! Comment syntax follows the sample files: `#` to the end of th→│"
"│  M f2  +1 −0             │   4▎                                                                  │"
"│  M parse.rs  +10 −2      │   5▎/// One parsed record: a key, its value, and the line it came fro→│"
"│──────────────────────────│   6▎#[derive(Debug, Clone, PartialEq, Eq)]                            │"
"│beta                      │   7 pub struct Record {                                               │"
"│  main · 2 files          │   8     pub key: String,                                              │"
"│  A u1  +1 −0  [upstream] │   9     pub value: String,                                            │"
"│  A u2  +2 −0  [mixed]    │  10     pub line: usize,                                              │"
"│  [upstream] 1 file       │  11 }                                                                 │"
"│──────────────────────────│  12                                                                   │"
"│W/notes                   │  13 /// Parse `text` into one record per `key = value` line.          │"
"│  draft · 1 file          │  14 ///                                                               │"
"│  M n2.md  +2 −0          │  15 /// Blank lines and `#` comments are skipped. A line without a `=→│"
"│                          │  16 /// error: it is simply not a record, which keeps the parser tota→│"
"│                          │  17 pub fn parse(text: &str) -> Vec<Record> {                         │"
"│                          │  18▎    let mut out = Vec::new();                                     │"
"│                          │  19▎    for (i, raw) in text.lines().enumerate() {                    │"
"│                          │  20▎        let line = raw.trim();                                    │"
"│                          │  21▎        if line.is_empty() || line.starts_with('#') || line.start→│"
"│                          │  22▎            continue;                                             │"
"│                          │  23▎        }                                                         │"
"│                          │  24▎        let Some((key, value)) = line.split_once('=') else {      │"
"│                          │  25             continue;                                             │"
"│                          │  26         };                                                        │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"^S save   Esc close                                                                                 "
